Login screen view

--- a/login.html
+++ b/login.html
@@ -29,8 +29,9 @@
           <button type="button" class="btn login-button">LOGIN</button>
         </div>
         <div>
-          <button type="button" class="btn basic-button">Register now</button>
-          <button type="button" class="btn basic-button go-right">Forgot password?</button>
+          
+          <button type="button" class="btn btn-link">Register now</button>
+          <button type="button" class="btn btn-link go-right">Forgot password?</button>
         </div>
 
         <!-- linea molesta -->
